--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".main.MainActivity">
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="match_parent" />
 
-        <TextView android:id="@+id/call_phone"
-            android:layout_marginLeft="64dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/call_phone"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginLeft="64dp"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textSize="14sp"
             android:text="拨号"
-            android:layout_weight="1"/>
+            android:textSize="14sp" />
 
-        <TextView android:id="@+id/phone_book"
+        <TextView
+            android:id="@+id/phone_book"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginRight="64dp"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textSize="14sp"
             android:text="联系人"
-            android:layout_weight="1"/>
+            android:textSize="14sp" />
 
     </LinearLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v4.view.ViewPager>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
