--- a/app/src/main/res/layout/fragment_booklist.xml
+++ b/app/src/main/res/layout/fragment_booklist.xml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <ListView android:id="@+id/listview"
+    <TextView
+        android:id="@+id/phoneNum"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:dividerHeight="0.6dp"
-        android:divider="@color/grey"/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="16dp"
+        android:textSize="16sp" />
+
+    <FrameLayout
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@color/grey"
+            android:dividerHeight="0.6dp" />
+    </FrameLayout>
+
+</FrameLayout>
