--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,6 @@
     android:orientation="vertical"
     tools:context=".main.MainActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -36,6 +32,12 @@
             android:textSize="14sp" />
 
     </LinearLayout>
+
+    <View android:id="@+id/slider"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@color/grey"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
