--- a/app/src/main/res/layout/fragment_delete.xml
+++ b/app/src/main/res/layout/fragment_delete.xml
@@ -16,4 +16,9 @@
         android:layout_height="wrap_content"
         android:text="自定义"/>
 
+    <Button android:id="@+id/test_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="测试单独的fragment"/>
+
 </LinearLayout>
