--- a/app/src/main/res/layout/item_book.xml
+++ b/app/src/main/res/layout/item_book.xml
@@ -6,6 +6,7 @@
     <TextView android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="16dp"
         android:textSize="20sp"/>
 
 </LinearLayout>
